weird spacing between tools on mobile fixed

--- a/static/sass/base.scss
+++ b/static/sass/base.scss
@@ -155,6 +155,11 @@ h2 {
 
     img.of-logo {
         width: 275px;
+        padding: 50px 0 30px 0;
+    }
+
+    .h1 {
+        padding-bottom: 30px;
     }
 
     .tools {
@@ -171,7 +176,7 @@ h2 {
     }
 
     .ind-tool-no-logo {
-        padding: 0 0 40px 0
+        padding: 0px;
     }
 
 }
